fix: wrapped main element around aside and nuxt element

--- a/assets/css/components/_aside.scss
+++ b/assets/css/components/_aside.scss
@@ -6,37 +6,41 @@ aside {
   aside {
     display: inherit;
     float: left;
+    margin-left: auto;
     padding-top: rem(58);
 
-    ul {
-      border-left: 1px solid #465d8b;
-      list-style-type: none;
-      margin-left: rem(45);
-      padding: 0 rem(0);
+    nav {
+      ul {
+        border-left: 1px solid #465d8b;
+        list-style-type: none;
+        margin-left: rem(45);
+        padding: 0 rem(0);
+        width: rem(195);
 
-      li {
-        line-height: rem(34);
-        margin: 0 0 rem(23) 0;
-        padding-left: rem(30);
-        width: rem(151);
-        word-wrap: break-word;
-
-        &:active {
-          border-left: rem(5) solid #465d8b;
-          font-weight: $font-weight-bold;
-          left: rem(-3);
+        li {
+          line-height: rem(34);
           margin: 0 0 rem(23) 0;
           padding-left: rem(30);
-          position: relative;
-        }
-
-        a {
-          color: $navy-light;
-          font-size: rem(24);
-          font-weight: $font-weight-normal;
+          width: rem(151);
+          word-wrap: break-word;
 
           &:active {
+            border-left: rem(5) solid #465d8b;
             font-weight: $font-weight-bold;
+            left: rem(-3);
+            margin: 0 0 rem(23) 0;
+            padding-left: rem(30);
+            position: relative;
+          }
+
+          a {
+            color: $navy-light;
+            font-size: rem(24);
+            font-weight: $font-weight-normal;
+
+            &:active {
+              font-weight: $font-weight-bold;
+            }
           }
         }
       }
