--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -2,8 +2,6 @@
 @import "header";
 
 article {
-  margin-left: auto;
-  margin-right: auto;
   max-width: 75ch;
   padding: rem(0) rem(27);
 
@@ -14,6 +12,8 @@ article {
 
   .wp-block-image {
     figure {
+      margin-left: 0;
+
       img {
         height: 100%;
       }
@@ -34,7 +34,6 @@ figcaption {
   font-size: 75%;
   font-style: italic;
   font-weight: 100;
-  margin: rem(5) 0 0;
   padding: 0;
   text-align: center;
 }
@@ -51,12 +50,17 @@ figcaption:hover {
 }
 
 @media screen and (min-width: rem(1024)) {
-  article {
-    max-width: 130ch;
-    padding: rem(0) rem(60);
+  main {
+    display: flex;
 
-    .wp-block-image ~ h2 {
-      margin-top: $img-size-medium;
+    article {
+      margin-right: auto;
+      max-width: 130ch;
+      padding: rem(0) rem(60);
+
+      .wp-block-image ~ h2 {
+        margin-top: $img-size-medium;
+      }
     }
   }
 
